# avr-mate

./: .gitignore  .gitmodules
modules/cartridge/: makefile
modules/cartridge/games/bouncing_ball/: ball.c  ball.h  main.c  makefile
modules/cartridge/games/button_tester/: main.c  makefile
modules/cartridge/games/hello_world/: main.c  makefile
modules/cartridge/games/test_screen/: main.c  makefile
modules/cartridge/include/cartridge/: haw_cartridge.h  haw_logger.h  haw_utils.h
modules/cartridge/make/: compiler.mk  compiler_avr.mk  compiler_gcc.mk  patterns.mk
modules/cartridge/src/: fifo.c  fifo.h  haw_cartridge_atmega328p.c  haw_cartridge_emulator.c  haw_logger_atmega328p.c  haw_logger_emulator.c
modules/core/: makefile
modules/core/include/avr-mate-core/: cartridge.h  commands.h  font.h  font5x7.h  graphx.h  handheld.h  protocol.h
modules/core/src/: cartridge.c  graphx.c  handheld.c  protocol.c
modules/core/test/: main.c  mock_communication.h  protocol_test.c  test_graphx.c  test_handheld_cartridge.c  test_protocol.c
modules/emulator/: CMakeLists.txt
modules/emulator/cmake/: compiler-warnings.cmake  conan.cmake
modules/emulator/src/: CMakeLists.txt  fifo_pipe.hpp  handheld_emulator.cpp  handheld_emulator.hpp  main.cpp  transceiver.hpp  transceiver_pipe.hpp
modules/emulator/test/: CMakeLists.txt  fifo_pipe_test.cpp
modules/handheld/: makefile
modules/handheld/src/: i2cmaster.c  logger.c  logger.h  main.c  spi_slave.c  spi_slave.h  ssd1306.c  ssd1306.h
